# personal-blog-site

./: .czrc  .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
blog/: admin.py  factory.py  models.py  obsidian_callout.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_featured.py  0003_alter_post_excerpt.py
blog/templates/blog/: about.html  home.html  post_detail.html  post_list.html  post_list_partial.html
blog/templates/blog/components/: post_item.html
blog/templates/blog/partials/: post_list_partial.html
blog/templatetags/: markdown_extras.py
core/: settings.py  urls.py
static/css/: blog.css  toc.css
static/js/: blog.js  highlight-init.js  nav.js  tailwind.config.js  toc.js
templates/: layout.html
