[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-distill>=3.2.7",
    "django-htmx>=1.27.0",
    "django-markdownx>=4.0.9",
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "pymdown-extensions>=10.21",
    "python-decouple>=3.8",
]
