[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dj-database-url>=3.1.2",
  "django-htmx>=1.27.0",
  "django-markdownx>=4.0.9",
  "gunicorn>=25.1.0",
  "markdown>=3.10.2",
  "pillow>=12.1.1",
  "psycopg2-binary>=2.9.11",
  "pymdown-extensions>=10.21",
  "python-decouple>=3.8",
  "whitenoise>=6.12.0",
]

[dependency-groups]
dev = ["factory-boy>=3.3.3"]
